--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -20,15 +20,15 @@
 			<div class="intro"> 
 				<h1 class="intro__title"> 
 					<span class="intro__title-pre">Photo Club</span> 
-					<span class="intro__title-sub">Welcom To Our Pige</span> 
+					<span class="intro__title-sub">Welcom To Photo Club</span> 
 				</h1> 
 				<span class="intro__info">Scroll moderately to fully experience the animations</span> 
 			</div>
 			<section class="content">				
 				<div class="grid grid--1">
 					<div class="grid-wrap">
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://static.wixstatic.com/media/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png/v1/fill/w_640,h_366,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://media.istockphoto.com/id/1146517111/photo/taj-mahal-mausoleum-in-agra.jpg?s=612x612&w=0&k=20&c=vcIjhwUrNyjoKbGbAQ5sOcEzDUgOfCsm9ySmJ8gNeRk=)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(1.jpg)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url()"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(3.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(4.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(5.jpg)"></div></div>
@@ -82,8 +82,8 @@
 			<section class="content">
 				<div class="grid grid--2">
 					<div class="grid-wrap">
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://static.wixstatic.com/media/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png/v1/fill/w_640,h_366,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://media.istockphoto.com/id/1146517111/photo/taj-mahal-mausoleum-in-agra.jpg?s=612x612&w=0&k=20&c=vcIjhwUrNyjoKbGbAQ5sOcEzDUgOfCsm9ySmJ8gNeRk=)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(1.jpg)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(2.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(3.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(4.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(5.jpg)"></div></div>
@@ -148,14 +148,14 @@
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(5.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(12.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(27.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://static.wixstatic.com/media/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png/v1/fill/w_640,h_366,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(1.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(46.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(35.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(20.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(39.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(8.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(25.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://media.istockphoto.com/id/1146517111/photo/taj-mahal-mausoleum-in-agra.jpg?s=612x612&w=0&k=20&c=vcIjhwUrNyjoKbGbAQ5sOcEzDUgOfCsm9ySmJ8gNeRk=)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(2.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(44.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(43.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(17.jpg)"></div></div>
@@ -208,8 +208,8 @@
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(13.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(4.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(14.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://static.wixstatic.com/media/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png/v1/fill/w_640,h_366,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://media.istockphoto.com/id/1146517111/photo/taj-mahal-mausoleum-in-agra.jpg?s=612x612&w=0&k=20&c=vcIjhwUrNyjoKbGbAQ5sOcEzDUgOfCsm9ySmJ8gNeRk=)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(1.jpg)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(2.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(11.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(20.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(23.jpg)"></div></div>
@@ -234,14 +234,14 @@
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(5.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(12.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(27.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://static.wixstatic.com/media/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png/v1/fill/w_640,h_366,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(1.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(46.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(35.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(20.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(39.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(8.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(25.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://media.istockphoto.com/id/1146517111/photo/taj-mahal-mausoleum-in-agra.jpg?s=612x612&w=0&k=20&c=vcIjhwUrNyjoKbGbAQ5sOcEzDUgOfCsm9ySmJ8gNeRk=)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(2.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(44.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(43.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(17.jpg)"></div></div>
@@ -305,13 +305,32 @@
 			</section>
 			<section class="outro">
 			</section>
-			<p class="credits">Made by <a href="https://twitter.com/codrops">@codrops</a></p>
 		</main>
+
+		<script>
+			document.addEventListener('DOMContentLoaded', (event) => {
+				const imageGrid = document.getElementById('imageGrid');
+				const imageCount = 48; // Number of images
+				const imagePath = ' '; // Path to images
+		
+				for (let i = 1; i <= imageCount; i++) {
+					const imageUrl = `${imagePath}/${i}.jpg`; // Assuming the images are named 1.jpg, 2.jpg, ...
+					const gridItem = `
+						<div class="grid__item">
+							<div class="grid__item-inner" style="background-image:url(${imageUrl})"></div>
+						</div>
+					`;
+					imageGrid.innerHTML += gridItem;
+				}
+			});
+		</script>
+		
+
 		<script src="https://tympanus.net/codrops/adpacks/cda_sponsor.js"></script>
-		<script src="js/gsap.min.js"></script>
-		<script src="js/ScrollTrigger.min.js"></script>
-		<script src="js/lenis.min.js"></script>
-		<script src="js/imagesloaded.pkgd.min.js"></script>
-		<script type="module" src="js/index.js"></script>
+		<script src="gsap.min.js"></script>
+		<script src="ScrollTrigger.min.js"></script>
+		<script src="lenis.min.js"></script>
+		<script src="imagesloaded.pkgd.min.js"></script>
+		<script type="module" src="index.js"></script>
 	</body>
 </html>
