--- a/views/covrege.ejs
+++ b/views/covrege.ejs
@@ -63,17 +63,59 @@
       </div>
     </div>
 
-    <input type="file" id="fileInput" multiple style="display: none;">
-    <input type="file" id="folderInput" webkitdirectory directory multiple style="display: none;">
-
     <div class="button-add-search">
+      <form action="/upload" method="post" enctype="multipart/form-data" style="display: none;">
+        <input required id="fileInput" type="file" name="files" multiple class="form-control" style="display: none;">
+        <input required type="text" name="folder" placeholder="folder name" class="form-control" value="<%= covrg.ceremonyTitle %>">
+      </form>
+    
       <button type="button" id="addButton" class="btn btn-outline-primary">Add</button>
       <button type="button" class="btn btn-outline-secondary">Search</button>
     </div>
+    
 
   </main>
 
   <script>
+
+  
+ 
+
+
+
+
+document.addEventListener('DOMContentLoaded', function () {
+    document.getElementById('addButton').addEventListener('click', function () {
+        document.getElementById('fileInput').click();
+    });
+
+    document.getElementById('fileInput').addEventListener('change', function (event) {
+          var files = event.target.files;
+          if (files) {
+            var formData = new FormData();
+            for (var i = 0; i < files.length; i++) {
+              formData.append('files', files[i]);
+            }
+            formData.append('folder', '<%= covrg.ceremonyTitle %>'); // Set folder name
+
+            // Make an AJAX request to the server
+            fetch('/upload', {
+              method: 'POST',
+              body: formData
+            }).then(response => {
+              if (response.ok) {
+                console.log('Files uploaded successfully');
+              } else {
+                console.error('Upload failed');
+              }
+            }).catch(err => console.error('Error:', err));
+          }
+        });
+        window.location.reload();
+        console.log('Files uploaded successfully');
+});
+
+
 
     let largeImage = document.getElementById('largeImage');
     largeImage.display = 'none';
