--- a/SWE363 Project/css/covrege.css
+++ b/SWE363 Project/css/covrege.css
@@ -73,9 +73,13 @@
   .btn {
     width: 35%;
   }
-  .gallery .photo .downloadIcon, .gallery .photo .eyeIcon {
+  i{
     color: #fff;
+    height: 10px;
+    width: 10px;
+    margin: 0 5px;
   }
+
 
 
 
@@ -133,7 +137,18 @@
   border-radius: 10px;
   object-fit: cover;
 }
-
+#bigdiv {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  z-index: 100;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.9);
+}
 
 
 
@@ -171,8 +186,8 @@
     display: flex; /* Show the icons when hovering over the photo */
   }
   .gallery .photo .downloadIcon, .gallery .photo .eyeIcon {
-    margin: 0 5px; /* Adjust spacing */
-    color: #000;
+    margin: 0 8px; /* Adjust spacing */
+    color: #fff;
   }
   .gallery .photo img{
     height: 100%;
@@ -209,7 +224,8 @@
 
   /* Additional styles for hover effects or other interactive elements */
   .gallery .photo:hover {
-    transform: scale(1.05); /* Scale-up effect */
-    transition: transform 0.3s ease-in-out;
+    filter: brightness(0.55); /* Darken the image on hover */
+    transition: filter 0.3s ease-in-out;
   }
+  
 }
