--- a/views/covrege.ejs
+++ b/views/covrege.ejs
@@ -69,7 +69,7 @@
   </main>
 
   <script>
-
+// function for the serach in python for face_recognition
 
 // Upload files
 document.addEventListener('DOMContentLoaded', function () {
