--- a/SWE363 Project/css/style.css
+++ b/SWE363 Project/css/style.css
@@ -1,42 +1,42 @@
 @font-face {
     font-family: 'Inter';
-    src: url('fonts/Inter-Thin.ttf') format('truetype');
+    src: url('Inter-Thin.ttf') format('truetype');
     font-weight: 100;
   }
   
   @font-face {
     font-family: 'Inter';
-    src: url('fonts/Inter-ExtraLight.ttf') format('truetype');
+    src: url('Inter-ExtraLight.ttf') format('truetype');
     font-weight: 200;
   }
   
   @font-face {
     font-family: 'Inter';
-    src: url('fonts/Inter-Light.ttf') format('truetype');
+    src: url('Inter-Light.ttf') format('truetype');
     font-weight: 300;
   }
   
   @font-face {
     font-family: 'Inter';
-    src: url('./fonts/Inter-Regular.ttf') format('truetype');
+    src: url('Inter-Regular.ttf') format('truetype');
     font-weight: 400;
   }
   
   @font-face {
     font-family: 'Inter';
-    src: url('fonts/Inter-Medium.ttf') format('truetype');
+    src: url('Inter-Medium.ttf') format('truetype');
     font-weight: 500;
   }
   
   @font-face {
     font-family: 'Inter';
-    src: url('fonts/Inter-SemiBold.ttf') format('truetype');
+    src: url('Inter-SemiBold.ttf') format('truetype');
     font-weight: 600;
   }
   
   @font-face {
     font-family: 'Inter';
-    src: url('fonts/Inter-Bold.ttf') format('truetype');
+    src: url('Inter-Bold.ttf') format('truetype');
     font-weight: 700;
   }
   
