--- a/views/covreges.ejs
+++ b/views/covreges.ejs
@@ -9,11 +9,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="icon" href="./photo-club-icon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="login.css">
+
     <link rel="stylesheet" href="covregeCard.css">
     <link rel="stylesheet" href="covrege.css">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="./style.css">
+
     <style>
+        main {
+            display: block;
+        }
+
         .submiter {
             display: none;
         }
