--- a/views/covrege.ejs
+++ b/views/covrege.ejs
@@ -1,12 +1,10 @@
-<!-- Covrege Where the covrege Photos stored and the user can search be the fice -->
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -17,7 +15,20 @@
   <title>
     <%= covrg.ceremonyTitle %>
   </title>
-
+  <style>
+    #bigdiv {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: none;
+      z-index: 100;
+      align-items: center;
+      justify-content: center;
+      background-color: rgba(0, 0, 0, 0.9);
+    }
+  </style>
 </head>
 
 <body>
@@ -38,21 +49,16 @@
       <p>
         <%= covrg.details %>
       </p>
-      <h1 id="output"></h1>
 
       <div class="gallery" id="gallery">
         <% files.forEach(function(file) { %>
-          <% if(file.folder == covrg.ceremonyTitle) { %>
           <div class="photo">
             <img src="<%= file.url %>" alt="---">
             <span>
               <i class="bi bi-cloud-download downloadIcon"></i>
               <i class="bi bi-eye eyeIcon"></i>
-              <i class="bi bi-trash3 deleteIcon" ></i>
-
             </span>
           </div>
-          <% } %>
           <% }); %>
       </div>
     </div>
@@ -63,17 +69,18 @@
         <input required type="text" name="folder" placeholder="folder name" class="form-control" value="<%= covrg.ceremonyTitle %>">
       </form>
     
-      <button type="button" id="addButton" class="btn btn-outline-primary">Add</button>
-      <button type="button" id="searchButton" class="btn btn-outline-secondary">Search</button>
+      <% if (userRole=="admin" || userRole=="user" ) { %>
+        <button type="button" id="addButton" class="btn btn-outline-primary">Add</button>
+      <% } %>
+      <button type="button" class="btn btn-outline-secondary">Search</button>
     </div>
     
 
   </main>
 
   <script>
-// function for the serach in python for face_recognition
 
-// Upload files
+
 document.addEventListener('DOMContentLoaded', function () {
     document.getElementById('addButton').addEventListener('click', function () {
         document.getElementById('fileInput').click();
