--- a/views/covreges.ejs
+++ b/views/covreges.ejs
@@ -69,13 +69,13 @@
 
     <div class="submiter">
         <div class="submationContaner"></div>
-        <form action="addCovrege" method="POST" class="login-form SubmationForm">
+        <form action="/upload" method="POST" class="login-form SubmationForm">
             <i class="bi bi-x" style="color: aliceblue; font-size: 27px;"></i>
             <h2>Covrege</h2>
             <div>
                 <label for="name">Convrege Name</label>
                 <br>
-                <input type="text" id="covregeName" name="covregeName" required>
+                <input type="text" id="covregeName" name="folder" required>
             </div>
 
             <div>
