--- a/SWE363 Project/css/style.css
+++ b/SWE363 Project/css/style.css
@@ -172,5 +172,9 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+}
 
+.username {
+    display: flex;
+    justify-content: center;
 }
