--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -77,7 +77,7 @@
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(48.jpg)"></div></div>
 					</div>
 				</div>
-				<h3 class="content__title content__title--right content__title--top">Fleeting moments, <br>existence's dance.</h3>
+				<h3 class="content__title content__title--right content__title--top">More than,<br>14000 photos <br> In graduation </h3>
 			</section>
 			<section class="content">
 				<div class="grid grid--2">
@@ -132,7 +132,7 @@
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(48.jpg)"></div></div>
 					</div>
 				</div>
-				<h3 class="content__title">Impermanence <br>guides life's river.</h3>
+				<h3 class="content__title">By more than <br>25 Photographer.</h3>
 			</section>
 			<section class="content content--spacing">
 				<div class="grid grid--3">
